--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ force-https: True
 #############
 
 lang: "en"
-author: "John Smith"
-title: "{ John Smith }"
-description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
-keywords: "smith, jones, personal, jekyll, theme"
+author: ""
+title: "Sanket & Mariya Love - GOD made spiritual bondage"
+description: ""
+keywords: ""
 favicon: "/img/favicon.ico"
 
 ################
@@ -55,8 +55,8 @@ type-speed: 10
 start-delay: 200
 delete-delay: 5000
 lines: # You can add HTML Tags in the Text
-  - text: "The lower you fall, the higher you'll fly."
-  - text: "Where’s your will to be weird?"
+  - text: "All the things are GOD orchestrated"
+  - text: "He answered my prayer & choosen you from billions for me Mariya!"
 
 me-img: "/img/jetpacktocat.png"
 
