--- a/_config.yml
+++ b/_config.yml
@@ -138,6 +138,9 @@ events:
   - image: "/img/timeline/baracktocat.jpg"
     date: "September 2007 - August 2013"
     description: "Started coding"
+    - image: ""
+    date: "May 27"
+    description: "Start"
 
 # First image of the Timeline
 
@@ -147,7 +150,7 @@ timeline-img: "/img/timeline/default.png"
 # Contact #
 ###########
 
-email: "your@email.here"
+email: "sanketsdive@gmail.com"
 
 ################
 # Author Blurb #
