--- a/_config.yml
+++ b/_config.yml
@@ -138,8 +138,8 @@ events:
   - image: "/img/timeline/baracktocat.jpg"
     date: "September 2007 - August 2013"
     description: "Started coding"
-    - image: ""
-    date: "May 27"
+  - image: "/img/timeline/baracktocat.jpg"
+    date: "May 27, 2017"
     description: "Start"
 
 # First image of the Timeline
